# MicYou

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_zh-cn.md  CONTRIBUTING_zh-tw.md  README.md  README_zh-cn.md  README_zh-tw.md  build.gradle.kts  gradle.properties
.github/workflows/: development.yml  mirrorchyan_release.yml  mirrorchyan_release_note.yml  release.yml
.omg/state/: learn-watch.json
buildSrc/src/main/kotlin/: CheckLocalizationTask.kt
composeApp/: build.gradle.kts  micyou.conf
composeApp/resources/macos/: Assets.car
composeApp/scripts/no-jre/: {{APP_NAME}}.bat  {{APP_NAME}}.ps1  {{APP_NAME}}.sh
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/lanrhyme/androidmic_md/: MainActivity.kt  Settings.android.kt
composeApp/src/androidMain/kotlin/com/lanrhyme/micyou/: AGENTS.md  AndroidLogger.kt  AudioEngine.android.kt  AudioService.kt  AudioSource.kt  BackHandlerCompat.android.kt  BackgroundImagePicker.android.kt  DeviceDiscovery.android.kt  Localization.android.kt  MainActivity.kt  MicYouTileService.kt  PermissionDialog.android.kt  Platform.android.kt  PluginFileChooser.android.kt  PluginHostProvider.android.kt  PluginImportDialog.android.kt  PluginManagerProvider.android.kt  PluginSettingsContent.android.kt  Settings.android.kt  UpdateChecker.android.kt
composeApp/src/androidMain/kotlin/com/lanrhyme/micyou/plugin/: AndroidPluginDataChannelImpl.kt  AndroidPluginHostImpl.kt  AndroidPluginLocalization.kt  AndroidPluginManager.kt  AndroidPluginStorage.kt
composeApp/src/commonMain/composeResources/files/i18n/: strings_cat.json  strings_en.json  strings_zh.json  strings_zh_hard.json  strings_zh_hk.json  strings_zh_tw.json
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-ca/: strings.xml
composeApp/src/commonMain/composeResources/values-zh/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rHK/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rSS/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rTW/: strings.xml
composeApp/src/commonMain/kotlin/com/lanrhyme/androidmic_md/: App.kt  Components.kt  DesktopHome.kt  DesktopSettings.kt  MainViewModel.kt  MobileHome.kt  Settings.kt  Theme.kt
composeApp/src/commonMain/kotlin/com/lanrhyme/micyou/: AGENTS.md  App.kt  AudioLevelHistory.kt  AudioMetrics.kt  AudioStreamViewModel.kt  AudioVisualizers.kt  AudioVisualizersEnhanced.kt  BackHandlerCompat.kt  ColorPicker.kt  Components.kt  ConnectionError.kt  ContributorsDialog.kt  CustomBackground.kt  DesktopHome.kt  DesktopHomeEnhanced.kt  DesktopSettings.kt  DeviceDiscovery.kt  Localization.kt  MainViewModel.kt  MobileHome.kt  MobileSettingsContent.kt  MonitoringMetricsHistory.kt  MonitoringPanel.kt  Platform.kt  PluginFileChooser.kt  PluginHostProvider.kt  PluginListPopup.kt  PluginManagerProvider.kt  PluginSettingsContent.kt  PluginSyncWarningDialog.kt  Protocol.kt  Settings.kt  SettingsViewModel.kt  ShardTextField.kt  Theme.kt  UpdateChecker.kt  UpdateViewModel.kt
composeApp/src/commonMain/kotlin/com/lanrhyme/micyou/animation/: AdvancedAnimations.kt  TransitionAnimations.kt  VisualEffects.kt
composeApp/src/commonMain/kotlin/com/lanrhyme/micyou/plugin/: BasePluginHostImpl.kt
composeApp/src/jvmMain/cpp/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  audio_processor.cpp
composeApp/src/jvmMain/cpp/ONNX_Runtime_1.14.1_Bin_Include_All_Platforms/onnxruntime-win-arm64-1.14.1/lib/: onnxruntime.lib  onnxruntime_providers_shared.lib
composeApp/src/jvmMain/kotlin/com/lanrhyme/androidmic_md/: Settings.jvm.kt  main.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/: AudioEngine.jvm.kt  AudioProcessor.kt  BackHandlerCompat.jvm.kt  CloseConfirmDialog.kt  DeviceDiscovery.jvm.kt  FloatingMicWindow.kt  LoadImageBitmap.jvm.kt  Localization.jvm.kt  Platform.jvm.kt  PluginFileChooser.jvm.kt  PluginHostProvider.jvm.kt  PluginManagerProvider.jvm.kt  PluginSettingsContent.jvm.kt  UpdateChecker.jvm.kt  VirtualAudioDeviceManager.kt  main.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/audio/: AGCEffect.kt  AGENTS.md  AmplifierEffect.kt  AudioOutputManager.kt  AudioProcessingException.kt  AudioProcessorPipeline.kt  DereverbEffect.kt  NoiseReducer.kt  ResamplerEffect.kt  UlunasProcessor.kt  VADEffect.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/network/: AGENTS.md  ConnectionHandler.kt  LinuxBlueZServer.kt  MdnsAdvertiser.kt  NetworkServer.kt  UdpConnectionHandler.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/platform/: AdbManager.kt  BlackHoleManager.kt  BluetoothDiagnostics.kt  FirewallManager.kt  PipeWireManager.kt  PlatformInfo.kt  VBCableManager.kt  WindowsAccentColorExtractor.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/plugin/: AGENTS.md  PluginClassLoader.kt  PluginDataChannelImpl.kt  PluginHostImpl.kt  PluginLocalizationImpl.kt  PluginManager.kt  PluginSecurityManager.kt  PluginStorage.kt
composeApp/src/jvmMain/kotlin/com/lanrhyme/micyou/util/: FileSettings.kt  Logger.kt  Settings.kt
composeApp/src/jvmMain/resources/models/: ulunas.onnx
docs/: FAQ.md  FAQ_TW.md  FAQ_ZH.md
docs/plugin-api/: README.md  api-reference.md  best-practices.md  permissions.md  plugin-format.md
docs/plugin-api/agent/rules/: project_rules.md
docs/plugin-api/agent/skills/: micyou-plugin.md
exampleplugins/sample-plugin/: README.md  build.gradle.kts
exampleplugins/sample-plugin/src/main/kotlin/com/example/sampleplugin/: PluginStrings.kt  SamplePlugin.kt  SamplePluginUI.kt
exampleplugins/sample-plugin/src/main/resources/: plugin.json
gradle/: libs.versions.toml
plugin-api/: build.gradle.kts
(+9 files in other folders)
